RESOLVED FIXED 242757
JavaScriptCore source files are missing includes when compiling them in a non-unified build
https://bugs.webkit.org/show_bug.cgi?id=242757
Summary JavaScriptCore source files are missing includes when compiling them in a non...
Argyrios Kyrtzidis
Reported 2022-07-14 10:52:29 PDT
Due to unified sources bundling there are implicit dependencies between implementation files and if the files get compiled on their own it leads to compiler or linker errors, due to missing includes. It would be good to add the missing includes so they can compile on their own, which is beneficial even for the unified build because adding/removing files changes the unified source partitions and can expose these errors later on.
Attachments
Argyrios Kyrtzidis
Comment 1 2022-07-14 11:06:10 PDT
Radar WebKit Bug Importer
Comment 2 2022-07-21 10:53:14 PDT
EWS
Comment 3 2022-09-27 10:43:48 PDT
Committed 254924@main (01ab6c22fca2): <https://commits.webkit.org/254924@main> Reviewed commits have been landed. Closing PR #2419 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.